fix(ServiceTreeView): replace custom infobox class with SpacingBox

--- a/src/styles/components/quota/styles.less
+++ b/src/styles/components/quota/styles.less
@@ -30,13 +30,3 @@
     }
   }
 }
-
-.quota-info {
-  border-radius: @base-spacing-unit * 1/6;
-  margin-bottom: @base-spacing-unit;
-
-  span {
-    font-weight: 400;
-    margin-left: @base-spacing-unit * 1/3;
-  }
-}
